--- a/02_eda.ipynb
+++ b/02_eda.ipynb
@@ -5,9 +5,12 @@
    "metadata": {},
    "source": [
     "# Moisture Magic 💦 🧙‍♂️\n",
-    "## Preprocessing of UFZ Dataset Soil Moisture \"Hohes Holz\" 📝 → 📦\n",
+    "## EDA of UFZ Dataset Soil Moisture \"Hohes Holz\" → 📈📊\n",
     "\n",
-    "HIDA 2020 Hackthon, 2020-11-05"
+    "**HIDA 2020 Hackthon, 2020-11-06**\n",
+    "\n",
+    "Maximilian Graf [[@Max_Grave_]](https://twitter.com/max_grafe_/), Alexander Merdian-Tarko, Julius Polz [[@jpolz3]](https://twitter.com/jpolz3/), Christian Werner [[@cwerner76]](https://twitter.com/cwerner76/)  \n",
+    "Source: https://github.com/HIDA-Datathon/moisturemagic.git"
    ]
   },
   {
@@ -17,8 +20,17 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "#import xarray as xr"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datashader as ds\n",
+    "import datashader.transfer_functions as tf"
    ]
   },
   {
@@ -4717,9 +4729,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "datascience",
    "language": "python",
-   "name": "python3"
+   "name": "datascience"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4731,7 +4743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
